# polarization-review

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
benchmarks/fake/: run.py  run_one.py
data/: items_abortion.json  items_ai.json  items_ai_regulation.json  items_climate_change.json  items_climate_change_is_not_real.json  items_climate_change_is_real.json  items_donald_trump.json  items_gun_control.json  items_inflation.json  items_kanye_west.json  items_keanu_reeves.json  items_nasa_funding.json  items_scamming.json  items_social_security.json  items_support_for_veterans.json  items_the_dress_is_blue_and_black.json  items_tsunamis.json
scripts/: assess_from_file.py  benchmark.py  benchmark_fake_scenarios.py  collect_items.py  compute_score.py  compute_score_config.json  pipeline_config.json  run_fake_scenario.py  run_fake_scenario_config.json  run_pipeline.py  run_pipeline_config.json  score_config.json
src/api/: README.md  api.py  cache.py  main.py  models.py  pyproject.toml
src/internal/pipeline/: README.md  __init__.py  domain.py  pyproject.toml
src/internal/pipeline/llm/: assess.py  client.py  fake_data.py  llm_assess.py  mock_llm.py  normalize.py  prompts.py  run.py  run_search.py  score.py  types.py  validate.py
src/internal/pipeline/llm/sources/: __init__.py  base.py  registry.py
src/internal/pipeline/llm/sources/youtube/: __init__.py  calls.py  prompts.py
src/internal/pipeline/mock/: data.py  data_fictitious.py  data_general.py  data_real_context.py  data_real_world.py  llm.py
src/internal/pipeline/scrape/: __init__.py  base.py  gnews.py  normalize.py  reddit.py  registry.py  youtube.py
src/internal/pipeline/scrape/gnews/: __init__.py  adapters.py  fetch.py  utils.py
src/internal/pipeline/scrape/reddit/: __init__.py  adapters.py  fetch.py  utils.py
src/internal/pipeline/scrape/youtube/: __init__.py  adapters.py  fetch.py  utils.py
tests/: conftest.py  test_cache.py  test_fake_data.py  test_gnews_scraper.py  test_llm_assess.py  test_normalize.py  test_reddit_scraper.py  test_run_search.py  test_score.py  test_validate.py  test_youtube_scraper.py
(+190 files in other folders)
