[project]
name = "pipeline"
version = "0.1.0"
description = "Minimal v0 polarization pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-genai>=1.0.0",
    "praw>=7.8.1",
    "prawcore>=2.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["pipeline*"]
